# ha-solcast-fusion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: hacs.yml  release.yml  tests.yml
custom_components/ha_solcast_fusion/: __init__.py  combiner.py  config_flow.py  const.py  coordinator.py  energy.py  horizon.py  manifest.json  mirror.py  sensor.py  solcast.py  store.py  strings.json
custom_components/ha_solcast_fusion/translations/: en.json
tests/: conftest.py  test_combiner.py  test_combiner_rollups.py  test_config_flow.py  test_const.py  test_energy.py  test_horizon.py  test_integration.py  test_mirror.py  test_scheduler.py  test_sensor.py  test_solcast.py  test_store.py  test_x1_contract.py
tests/fixtures/: horizon_seed.txt
