[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha_solcast_fusion"
version = "0.1.0"
description = "SolcastFusion Home Assistant integration"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = [
    "RUF001",   # ambiguous-unicode-character-string (units: °, µ)
    "RUF002",   # ambiguous-unicode-character-docstring
    "RUF003",   # ambiguous-unicode-character-comment
    "SIM105",   # suppressible-exception (contextlib.suppress less readable)
    "I001",     # unsorted-imports (try/except HA compat blocks break on reorder)
    "F401",     # unused-import (re-exports + try/except HA compat patterns)
    "F811",     # redefined-while-unused (try/except fallback patterns)
    "E402",     # module-import-not-at-top (conftest mock setup requires this)
    "N806",     # non-lowercase-variable-in-function (constants in functions)
    "SIM102",   # collapsible-if (nested ifs often clearer)
    "SIM108",   # if-else-block-instead-of-if-exp (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806", "F841", "E402", "RUF059", "F401", "F811", "B007", "B024", "E731", "B011"]
"tests/conftest.py" = ["E402", "F811"]
